@@ -19,13 +19,15 @@ cat <<\EOF > prog.cc
 #include <locale.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include "xsetenv.h"
 #define _(string) gettext (string)
 
 int main (int argc, char *argv[])
 {
   int n = atoi (argv[2]);
 
-  if (setlocale (LC_ALL, argv[1]) == NULL)
+  xsetenv ("LC_ALL", argv[1], 1);
+  if (setlocale (LC_ALL, "") == NULL)
     {
       cerr << "Couldn't set locale." << endl;
       exit (77);
@@ -48,7 +50,7 @@ EOF
 top_builddir=..
 
 tmpfiles="$tmpfiles prog.${OBJEXT} prog${EXEEXT}"
-${LIBTOOL} --quiet --mode=link ${CXX} ${CXXFLAGS} ${CPPFLAGS} ${LDFLAGS} -o prog prog.cc -I../intl ${INTLLIBS} \
+${LIBTOOL} --quiet --mode=link ${CXX} ${CXXFLAGS} ${CPPFLAGS} ${LDFLAGS} -o prog prog.cc -I$top_srcdir/lib ../lib/libgettextlib.la -I../intl ${INTLLIBS} \
   || exit 1
 
 tmpfiles="$tmpfiles prog.pot"
