@@ -1,3 +1,11 @@
+2002-01-09  Bruno Haible  <bruno@clisp.org>
+
+	* lang-c: Use xsetenv before setlocale.
+	* lang-c++: Likewise.
+	* lang-objc: Likewise.
+	* plural-1-prg.c: Likewise.
+	* Makefile.am (cake_LDADD): New variable.
+
 2002-01-08  Bruno Haible  <bruno@clisp.org>
 
 	* msgattrib-*: Terminate the test immediately if the msg* program
